--- a/index.html
+++ b/index.html
@@ -1,44 +1,32 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <title>Valentine 💖</title>
+
   <style>
     body {
       height: 100vh;
+      margin: 0;
       display: flex;
       justify-content: center;
       align-items: center;
-      background: linear-gradient(135deg,#ff9a9e,#fad0c4);
-      font-family: Arial;
+      background: linear-gradient(135deg, #ff9a9e, #fad0c4);
+      font-family: Arial, sans-serif;
+      overflow: hidden;
     }
-    h1 { color: white; }
+
+    .container {
+      text-align: center;
+      position: relative;
+    }
+
+    h1 {
+      color: white;
+      margin-bottom: 30px;
+    }
+
     button {
       padding: 15px 25px;
-      border-radius: 30px;
-      border: none;
-      cursor: pointer;
-      transition: 0.3s;
-    }
-    #yes:hover { transform: scale(1.3); }
-    #no { position: absolute; }
-  </style>
-</head>
-<body>
-
-<div>
-  <h1>Will you be my Valentine? 💕</h1>
-  <button id="yes">Yes, aap nhi to aur kaun 💖</button>
-  <button id="no">No yr, I need some time 😶</button>
-</div>
-
-<script>
-  const no = document.getElementById("no");
-  no.onmouseover = () => {
-    no.style.left = Math.random()*300 + "px";
-    no.style.top = Math.random()*200 + "px";
-  }
-</script>
-
-</body>
-</html>
+      font-size: 16px;
+      border-radius: 30p
