--- a/index.html
+++ b/index.html
@@ -29,4 +29,101 @@
     button {
       padding: 15px 25px;
       font-size: 16px;
-      border-radius: 30p
+      border-radius: 30px;
+      border: none;
+      cursor: pointer;
+      transition: transform 0.2s ease;
+    }
+
+    #yes {
+      background: #ff4d6d;
+      color: white;
+    }
+
+    #yes:hover {
+      transform: scale(1.4);
+    }
+
+    #no {
+      position: absolute;
+      background: #6c757d;
+      color: white;
+    }
+
+    #emoji {
+      position: absolute;
+      font-size: 40px;
+      display: none;
+      animation: pop 0.4s ease;
+    }
+
+    @keyframes pop {
+      0% { transform: scale(0); }
+      100% { transform: scale(1); }
+    }
+
+    #gif {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      width: 180px;
+      display: none;
+      border-radius: 15px;
+    }
+  </style>
+</head>
+
+<body>
+
+  <div class="container">
+    <h1>Will you be my Valentine? 💕</h1>
+    <button id="yes">Yes, aap nhi to aur kaun 💖</button>
+    <button id="no">No yr, I need some time 😶</button>
+    <div id="emoji">😡</div>
+  </div>
+
+  <img id="gif" src="https://media.giphy.com/media/l3q2K5jinAlChoCLS/giphy.gif">
+
+  <script>
+    const noBtn = document.getElementById("no");
+    const emoji = document.getElementById("emoji");
+    const gif = document.getElementById("gif");
+
+    function moveNoButton() {
+      const x = Math.random() * (window.innerWidth - 100);
+      const y = Math.random() * (window.innerHeight - 100);
+      noBtn.style.left = x + "px";
+      noBtn.style.top = y + "px";
+    }
+
+    // Cursor paas aate hi bhaag jaaye
+    document.addEventListener("mousemove", (e) => {
+      const rect = noBtn.getBoundingClientRect();
+      const distance = Math.hypot(
+        e.clientX - (rect.left + rect.width / 2),
+        e.clientY - (rect.top + rect.height / 2)
+      );
+
+      if (distance < 120) {
+        moveNoButton();
+
+        // Angry emoji
+        emoji.style.left = rect.left + "px";
+        emoji.style.top = rect.top - 50 + "px";
+        emoji.style.display = "block";
+
+        // GIF show
+        gif.style.display = "block";
+
+        setTimeout(() => {
+          emoji.style.display = "none";
+        }, 500);
+      }
+    });
+
+    // Initial random position
+    moveNoButton();
+  </script>
+
+</body>
+</html>
