--- a/index.html
+++ b/index.html
@@ -1,200 +1,199 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>Valentine 💖</title>
+<meta charset="UTF-8" />
+<title>Will You Be My Forever ❤️</title>
 
 <style>
-* {
-  box-sizing: border-box;
-}
+    body {
+        margin: 0;
+        padding: 0;
+        height: 100vh;
+        background: radial-gradient(circle, #ffdde1, #ee9ca7);
+        font-family: 'Segoe UI', sans-serif;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        overflow: hidden;
+    }
 
-body {
-  margin: 0;
-  height: 100vh;
-  overflow: hidden;
-  background: linear-gradient(135deg, #ff9a9e, #fad0c4);
-  font-family: 'Arial', sans-serif;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
+    .container {
+        text-align: center;
+    }
 
-.container {
-  text-align: center;
-  z-index: 2;
-}
+    h1 {
+        font-size: 52px;
+        color: #b8003f;
+        margin-bottom: 30px;
+    }
 
-h1 {
-  color: white;
-  margin-bottom: 30px;
-}
+    .buttons {
+        position: relative;
+        margin-top: 20px;
+    }
 
-button {
-  padding: 16px 28px;
-  font-size: 16px;
-  border-radius: 30px;
-  border: none;
-  cursor: pointer;
-}
+    button {
+        font-size: 22px;
+        padding: 12px 30px;
+        border-radius: 40px;
+        border: none;
+        cursor: pointer;
+        margin: 10px;
+    }
 
-#yesBtn {
-  background: #ff4d6d;
-  color: white;
-  z-index: 3;
-}
+    #yesBtn {
+        background: #ff0055;
+        color: white;
+        position: relative;
+        z-index: 2;
+    }
 
-#noBtn {
-  position: absolute;
-  background: #6c757d;
-  color: white;
-  z-index: 3;
-}
+    #noBtn {
+        background: #444;
+        color: white;
+        position: absolute;
+    }
 
-#emoji {
-  position: absolute;
-  font-size: 40px;
-  display: none;
-  z-index: 4;
-}
+    /* ❤️ Heart */
+    .heart {
+        position: absolute;
+        top: -120px;
+        left: 50%;
+        transform: translateX(-50%);
+        font-size: 120px;
+        opacity: 0;
+        transition: 0.3s;
+        pointer-events: none;
+    }
 
-#gif {
-  position: fixed;
-  bottom: 20px;
-  right: 20px;
-  width: 160px;
-  display: none;
-  border-radius: 15px;
-  z-index: 4;
-}
+    #yesBtn:hover + .heart {
+        opacity: 1;
+    }
 
-.hearts {
-  position: fixed;
-  inset: 0;
-  pointer-events: none;
-  display: none;
-}
+    /* 💥 Crackers */
+    .cracker {
+        position: absolute;
+        width: 10px;
+        height: 10px;
+        background: gold;
+        border-radius: 50%;
+        animation: explode 1s linear forwards;
+    }
 
-.heart {
-  position: absolute;
-  color: pink;
-  font-size: 24px;
-  animation: float 5s linear infinite;
-}
+    @keyframes explode {
+        to {
+            transform: translate(var(--x), var(--y));
+            opacity: 0;
+        }
+    }
 
-@keyframes float {
-  from {
-    transform: translateY(100vh);
-    opacity: 1;
-  }
-  to {
-    transform: translateY(-10vh);
-    opacity: 0;
-  }
-}
+    /* 💍 Forever page */
+    .forever {
+        display: none;
+        text-align: center;
+        padding: 20px;
+    }
 
-#proposal {
-  position: fixed;
-  inset: 0;
-  background: rgba(255, 192, 203, 0.95);
-  display: none;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  text-align: center;
-  z-index: 10;
-}
+    .forever h2 {
+        font-size: 60px;
+        color: #c1004a;
+    }
 
-#proposal h2 {
-  color: #ff2f68;
-  margin-bottom: 20px;
-}
+    .forever img {
+        width: 280px;
+        border-radius: 20px;
+        margin: 20px 0;
+    }
 
-#proposal img {
-  width: 200px;
-}
+    .backBtn {
+        background: black;
+        color: white;
+        margin-top: 20px;
+    }
+
+    .shayari {
+        margin-top: 20px;
+        font-size: 20px;
+        color: #5a0033;
+        display: none;
+    }
 </style>
 </head>
 
 <body>
 
-<div class="container">
-  <h1>Will you be my Valentine? 💕</h1>
-  <button id="yesBtn">Yes, aap nhi to aur kaun 💖</button>
-  <button id="noBtn">No yr, I need some time 😶</button>
+<div class="container" id="mainPage">
+    <h1>Will you be my forever? 💖</h1>
+
+    <div class="buttons">
+        <button id="yesBtn">YES</button>
+        <div class="heart">❤️</div>
+        <button id="noBtn">NO</button>
+    </div>
 </div>
 
-<div id="emoji">😡</div>
-<img id="gif" src="https://media.giphy.com/media/l3q2K5jinAlChoCLS/giphy.gif">
+<div class="forever" id="foreverPage">
+    <h2>Will you be my FOREVER 💍</h2>
 
-<div class="hearts" id="hearts"></div>
+    <img src="https://media.giphy.com/media/MDJ9IbxxvDUQM/giphy.gif" alt="Love GIF">
 
-<div id="proposal">
-  <img src="https://media.giphy.com/media/3o6ZsW8Zc0L8pGqKZC/giphy.gif">
-  <h2>💍 Will you be my forever? 💖</h2>
-  <p>Forever starts with you 💕</p>
+    <br>
+    <button class="backBtn" id="backBtn">Back</button>
+
+    <div class="shayari" id="shayari">
+        <p>
+            “क़ैद कर लिया है तुम्हें अपनी मोहब्बत में,<br>
+            अब रिहाई की कोई शर्त नहीं…” – <b>गुलज़ार</b>
+        </p>
+        <p>
+            😌 <b>Ab aap meri ho chuki hai,<br>
+            ab koi wapsi possible nahi hai.</b>
+        </p>
+    </div>
 </div>
+
+<audio id="noAudio">
+    <source src="https://www.myinstants.com/media/sounds/no-no-no.mp3" type="audio/mpeg">
+</audio>
 
 <script>
-const noBtn = document.getElementById("noBtn");
-const yesBtn = document.getElementById("yesBtn");
-const emoji = document.getElementById("emoji");
-const gif = document.getElementById("gif");
-const hearts = document.getElementById("hearts");
-const proposal = document.getElementById("proposal");
+    const noBtn = document.getElementById("noBtn");
+    const noAudio = document.getElementById("noAudio");
 
-function moveNoButton() {
-  const padding = 80;
-  const maxX = window.innerWidth - noBtn.offsetWidth - padding;
-  const maxY = window.innerHeight - noBtn.offsetHeight - padding;
+    noBtn.style.left = "200px";
+    noBtn.style.top = "0px";
 
-  const x = Math.random() * maxX;
-  const y = Math.random() * maxY;
+    noBtn.addEventListener("mouseenter", () => {
+        const x = Math.random() * 300 - 150;
+        const y = Math.random() * 200 - 100;
+        noBtn.style.transform = `translate(${x}px, ${y}px)`;
+        noAudio.play();
+    });
 
-  noBtn.style.left = x + "px";
-  noBtn.style.top = y + "px";
-}
+    document.getElementById("yesBtn").addEventListener("click", () => {
+        createCrackers();
+        setTimeout(() => {
+            document.getElementById("mainPage").style.display = "none";
+            document.getElementById("foreverPage").style.display = "block";
+        }, 800);
+    });
 
-moveNoButton();
+    document.getElementById("backBtn").addEventListener("click", () => {
+        document.getElementById("shayari").style.display = "block";
+    });
 
-document.addEventListener("mousemove", (e) => {
-  const rect = noBtn.getBoundingClientRect();
-  const centerX = rect.left + rect.width / 2;
-  const centerY = rect.top + rect.height / 2;
-
-  const distance = Math.hypot(e.clientX - centerX, e.clientY - centerY);
-
-  if (distance < 160) {
-    moveNoButton();
-
-    emoji.style.left = centerX + "px";
-    emoji.style.top = centerY - 50 + "px";
-    emoji.style.display = "block";
-    gif.style.display = "block";
-
-    setTimeout(() => {
-      emoji.style.display = "none";
-    }, 400);
-  }
-});
-
-yesBtn.addEventListener("mouseenter", () => {
-  hearts.style.display = "block";
-  hearts.innerHTML = "";
-
-  for (let i = 0; i < 40; i++) {
-    const heart = document.createElement("div");
-    heart.className = "heart";
-    heart.innerHTML = "💗";
-    heart.style.left = Math.random() * 100 + "vw";
-    heart.style.animationDelay = Math.random() * 3 + "s";
-    hearts.appendChild(heart);
-  }
-});
-
-yesBtn.addEventListener("click", () => {
-  proposal.style.display = "flex";
-});
+    function createCrackers() {
+        for (let i = 0; i < 40; i++) {
+            const c = document.createElement("div");
+            c.className = "cracker";
+            c.style.left = "50%";
+            c.style.top = "50%";
+            c.style.setProperty("--x", `${Math.random() * 400 - 200}px`);
+            c.style.setProperty("--y", `${Math.random() * 400 - 200}px`);
+            document.body.appendChild(c);
+            setTimeout(() => c.remove(), 1000);
+        }
+    }
 </script>
 
 </body>
