--- a/index.html
+++ b/index.html
@@ -188,10 +188,10 @@ button{
 
 <div class="page forever bg-yes" id="forever">
   <div>
-    <h2>Will you be my Forever? 💍</h2>
-    <h2>मेरो माया... मेरो जीवन... मेरो सबैथोक... मेरो जान... मेरी बिव</h2>
+    <h3>Will you be my Forever? 💍</h3>
+    <h3>मेरो माया... मेरो जीवन... मेरो सबैथोक... मेरो जान... मेरी बीवी</h3>
 
-    <img src="https://media.giphy.com/media/G3va31oEEnIkM/giphy.gif">
+    <img src="https://media1.tenor.com/m/x1ETymYphM4AAAAC/sandy33.gif">
 
     <br>
     <button class="backBtn" id="backBtn">Back</button>
