--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@ button{
 
 <div class="page" id="main">
   <div class="container">
-    <h1>Will you be my forever?</h1>
+    <h1>Will you be my Valentine for upcoming every year till I die?</h1>
 
     <div class="buttons" id="btnArea">
       <button id="yesBtn">
