--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@ button{
     margin-top:18px;
     font-size:18px;
 }
-#bgVideo #bgForeverVideo{
+#bgVideo, #bgForeverVideo{
     position: fixed;
     top: 0;
     left: 0;
