--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@ yesBtn.onclick = () => {
   forever.style.display = "flex";
 
     // hide main video, show forever video
-    document.getElementById("bgMainVideo").style.display = "none";
+    document.getElementById("bgVideo").style.display = "none";
     document.getElementById("bgForeverVideo").style.display = "block";
 };
 
