--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@ button{
     <h3>Will you be my Forever? 💍</h3>
     <h3>मेरो माया... मेरो जीवन... मेरो सबैथोक... मेरो जान... मेरी बीवी</h3>
 
-    <img src="https://media1.tenor.com/m/x1ETymYphM4AAAAC/sandy33.gif">
+    <!-- <img src="https://media1.tenor.com/m/x1ETymYphM4AAAAC/sandy33.gif"> -->
 
     <br>
     <button class="backBtn" id="backBtn">Back</button>
