--- a/index.html
+++ b/index.html
@@ -209,8 +209,9 @@ button{
 
 <div class="page forever bg-yes" id="forever">
   <div>
-    <h3>Will you be my Forever? 💍</h3>
-    <h3>मेरो माया... मेरो जीवन... मेरो सबैथोक... मेरो जान... मेरी बीवी</h3>
+    <h2>Will you be Mine, your body, your touch? 💍</h2>
+    <h2> Let's make the bed wet </h2>
+    <!-- <h3>मेरो माया... मेरो जीवन... मेरो सबैथोक... मेरो जान... मेरी बीवी</h3> -->
 
     <!-- <img src="https://media1.tenor.com/m/x1ETymYphM4AAAAC/sandy33.gif"> -->
 
