--- a/index.html
+++ b/index.html
@@ -196,13 +196,20 @@ button{
     <h1>Will you be my Valentine for upcoming every year till I die?</h1>
 
     <div class="buttons" id="btnArea">
-      <button id="yesBtn">
+      <!-- <button id="yesBtn">
         Haan Jaana, Ye bhi koi puchne wali baat hai
       </button>
 
       <button id="noBtn">
         Nahi Jaana, Mai sure nhi hu
+      </button> -->
+        <button id="yesBtn">
+        Haan, Ye bhi koi puchne wali baat hai
       </button>
+
+      <button id="noBtn">
+        Nahi Yaar, Mai sure nhi hu abhi
+      </button> 
     </div>
   </div>
 </div>
