--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Forever 💖</title>
+<title>Oh Yes, Fuck!</title>
 
 <!-- GOOGLE FONTS -->
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700&family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
@@ -216,7 +216,8 @@ button{
 
 <div class="page forever bg-yes" id="forever">
   <div>
-    <h2>Will you be Mine, your body, your touch? 💍</h2>
+    <!-- <h2>Will you be Mine, your body, your touch? 💍</h2> -->
+    <h2>Will you be Mine, your body, your touch?</h2>
     <h2> Let's make the bed wet </h2>
     <!-- <h3>मेरो माया... मेरो जीवन... मेरो सबैथोक... मेरो जान... मेरी बीवी</h3> -->
 
